Bug 13615 - inherited typedefs not found properly
Summary: inherited typedefs not found properly
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: c++ (show other bugs)
Version: archer
: P2 normal
Target Milestone: ---
Assignee: Keith Seitz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-23 18:20 UTC by Tom Tromey
Modified: 2012-11-16 20:56 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Tromey 2012-01-23 18:20:56 UTC
Consider this program:

struct Base {
  typedef int value_type;
};

struct Derived : public Base {
  value_type x;
};

Derived d;
Derived::value_type v;


Compile this with '-g -c' and run gdb on the .o.
Now some type lookups work, but some do not:

(gdb) ptype Derived::value_type
type = int
(gdb) p (Derived::value_type *) 0
A syntax error in expression, near `) 0'.
(gdb) p (Base::value_type *) 0
A syntax error in expression, near `) 0'.
(gdb) python print gdb.lookup_type('Derived::value_type')
Traceback (most recent call last):
  File "<string>", line 1, in <module>
RuntimeError: No type named Derived::value_type.
Error while executing Python code.
(gdb) python print gdb.lookup_type('Base::value_type')
Base::value_type
Comment 1 Sourceware Commits 2012-11-16 20:54:34 UTC
CVSROOT:	/cvs/src
Module name:	src
Changes by:	kseitz@sourceware.org	2012-11-16 20:54:30

Modified files:
	gdb            : ChangeLog cp-namespace.c 
	gdb/testsuite  : ChangeLog 
	gdb/testsuite/gdb.cp: derivation.exp derivation.cc 
Added files:
	gdb/testsuite/gdb.cp: baseenum.cc baseenum.exp 

Log message:
	PR c++/13615
	* cp-namespace.c (cp_lookup_symbol_in_namespace): Add SEARCH
	parameter and pass it to lookup_symbol_file.
	(cp_lookup_symbol_imports): Tell cp_lookup_symbol_in_namespace
	to search base classes.
	(cp_lookup_symbol_namespace): Likewise.
	(lookup_namespace_scope): Likewise.
	(lookup_symbol_file): Add SEARCH parameter.
	If SEARCH is non-zero and no symbol is found, lookup the class
	and call cp_lookup_nested_symbol.
	(find_symbol_in_baseclass): New function.
	(cp_lookup_nested_symbol): Do not let
	cp_lookup_symbol_in_namespace search through base classes.
	Do that later when there is no global symbol match.
	
	PR c++/13615
	* gdb.cp/baseenum.cc: New file.
	* gdb.cp/baseenum.exp: New file.
	* gdb.cp/derivation.cc (A): Add copyright.
	Add a typedef.
	(B): Use A::value_type instead of int.  Change all references.
	(D): Use value_type instead of int.  Change all references.
	(E): Likewise.
	(F); Likewise.
	(Z): New class.
	(ZZ): New class.
	(N, Base, Derived): New namespace and classes.
	(main): Add instances of Z and ZZ.
	Make sure all symbols from N are kept.
	* gdb.cp/derivation.exp: Update typedef changes in tests.
	Add tests for class typedefs both before and after starting
	the inferior.
	Add tests for searching for a typedef while stopped in a
	method.

Patches:
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gdb/ChangeLog.diff?cvsroot=src&r1=1.14837&r2=1.14838
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gdb/cp-namespace.c.diff?cvsroot=src&r1=1.59&r2=1.60
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gdb/testsuite/ChangeLog.diff?cvsroot=src&r1=1.3459&r2=1.3460
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gdb/testsuite/gdb.cp/baseenum.cc.diff?cvsroot=src&r1=NONE&r2=1.1
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gdb/testsuite/gdb.cp/baseenum.exp.diff?cvsroot=src&r1=NONE&r2=1.1
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gdb/testsuite/gdb.cp/derivation.exp.diff?cvsroot=src&r1=1.22&r2=1.23
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gdb/testsuite/gdb.cp/derivation.cc.diff?cvsroot=src&r1=1.3&r2=1.4
Comment 2 Keith Seitz 2012-11-16 20:56:25 UTC
Patch committed.