	PR c++/13615 	* cp-namespace.c (cp_lookup_symbol_in_namespace): Add SEARCH 	parameter and pass it to lookup_symbol_file. 	(cp_lookup_symbol_imports): Tell cp_lookup_symbol_in_namespace 	to search base classes. 	(cp_lookup_symbol_namespace): Likewise. 	(lookup_namespace_scope): Likewise. 	(lookup_symbol_file): Add SEARCH parameter. 	If SEARCH is non-zero and no symbol is found, lookup the class 	and call cp_lookup_nested_symbol. 	(find_symbol_in_baseclass): New function. 	(cp_lookup_nested_symbol): Do not let 	cp_lookup_symbol_in_namespace search through base classes. 	Do that later when there is no global symbol match.

PR c++/13615
	* gdb.cp/baseenum.cc: New file.
	* gdb.cp/baseenum.exp: New file.
	* gdb.cp/derivation.cc (A): Add copyright.
	Add a typedef.
	(B): Use A::value_type instead of int.  Change all references.
	(D): Use value_type instead of int.  Change all references.
	(E): Likewise.
	(F); Likewise.
	(Z): New class.
	(ZZ): New class.
 	(N, Base, Derived): New namespace and classes.
	(main): Add instances of Z and ZZ.
	Make sure all symbols from N are kept.
	* gdb.cp/derivation.exp: Update typedef changes in tests.
	Add tests for class typedefs both before and after starting
	the inferior.
	Add tests for searching for a typedef while stopped in a
	method.